@@ -11,7 +11,7 @@ use Moo;
 
 extension_map '+File::Gettext::Storage::PO' => '.po';
 
-extends q(File::DataClass::Storage);
+extends 'File::DataClass::Storage';
 
 has '+extn' => default => '.po';
 
